[gd_scene load_steps=4 format=2]

[ext_resource path="res://ImageEdit.gd" type="Script" id=1]
[ext_resource path="res://checker.png" type="Texture" id=2]
[ext_resource path="res://ImageGrid.tscn" type="PackedScene" id=3]

[node name="ImageEdit" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_min_size = Vector2( 64, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4
_sections_unfolded = [ "Custom Constants", "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 4.0
margin_right = 256.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 25.0
margin_right = 38.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="Container" type="Container" parent="MarginContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_right = 62.0
margin_bottom = 64.0
rect_min_size = Vector2( 20, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="ImageButton" type="ToolButton" parent="MarginContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 66.0
margin_right = 130.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "custom_styles/hover", "custom_styles/pressed" ]

[node name="CheckBox" type="CheckBox" parent="MarginContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 134.0
margin_right = 248.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "TIP_FILTERED"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "KEY_FILTERED"
flat = false
align = 0
_sections_unfolded = [ "Hint" ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="FileDialog" type="FileDialog" parent="CanvasLayer"]
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 376.0
margin_top = 280.0
margin_right = 1031.0
margin_bottom = 668.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Open a File"
resizable = true
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 0
access = 2
filters = PoolStringArray(  )
show_hidden_files = false
current_dir = "/home/ben/godot_sketchyfun/godot/projects/BlastFX"
current_file = ""
current_path = "/home/ben/godot_sketchyfun/godot/projects/BlastFX/"
_sections_unfolded = [ "filters" ]

[node name="PreviewBG" type="Sprite" parent="CanvasLayer/FileDialog"]
modulate = Color( 0, 0, 0, 0.494118 )
position = Vector2( 810, 170 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Preview" type="Sprite" parent="CanvasLayer/FileDialog"]
position = Vector2( 810, 170 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Node2D" type="Node2D" parent="CanvasLayer/FileDialog"]
position = Vector2( 810, 210 )
_sections_unfolded = [ "Transform" ]

[node name="Label2" type="Label" parent="CanvasLayer/FileDialog/Node2D"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -34.0
margin_top = 50.0
margin_right = 36.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Preview"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ImageGrid" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="Timer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/ImageButton" to="." method="_on_ToolButton_pressed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="file_selected" from="CanvasLayer/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="image_selected" from="CanvasLayer/ImageGrid" to="." method="_on_ImageGrid_image_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
